--- a/index.html
+++ b/index.html
@@ -65,10 +65,15 @@
 </head>
 <body>
   <h1>Icaaa, will you be my girlfriend?</h1>
-  <button id="yes" onclick="location.href='page2.html'">Aku mauuuu</button>
+  <button id="yes">Aku mauuuu</button>
   <button id="no">MOH AKU MOH</button>  <audio autoplay loop>
     <source src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" type="audio/mpeg">
   </audio>  <script>
+    const yesBtn = document.getElementById('yes');
+    yesBtn.addEventListener('click', () => {
+      window.location.href = 'page2.html';
+    });
+
     const noBtn = document.getElementById('no');
     noBtn.addEventListener('mouseover', () => {
       const i = Math.floor(Math.random() * (window.innerWidth - 100));
@@ -86,4 +91,4 @@
       setTimeout(() => heart.remove(), 3000);
     });
   </script></body>
-  </html>
+</html>
