--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,65 +7,46 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background-color: #fdf6f9;
+      background: #fff0f5;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-      font-family: sans-serif;
+    }
+    .envelope-container {
+      width: 200px;
+      height: 150px;
+      cursor: pointer;
+      position: relative;
+      animation: float 2s ease-in-out infinite;
     }
     .envelope {
-      position: relative;
-      width: 200px;
-      height: 120px;
-      background: #fff;
-      border: 2px solid #d16ba5;
-      cursor: pointer;
-      transition: transform 1s ease-in-out;
+      width: 100%;
+      height: 100%;
     }
-    .flap {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-left: 100px solid transparent;
-      border-right: 100px solid transparent;
-      border-bottom: 60px solid #d16ba5;
-      transition: transform 1s ease-in-out;
-      transform-origin: top;
-    }
-    .heart {
-      position: absolute;
-      top: 35%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 2rem;
-      color: #d16ba5;
-      transition: opacity 0.5s;
-    }
-    .opened .flap {
-      transform: rotateX(180deg);
-    }
-    .opened .heart {
-      opacity: 0;
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
   </style>
 </head>
 <body>
-  <div class="envelope" onclick="openEnvelope()">
-    <div class="flap"></div>
-    <div class="heart">❤️</div>
+  <div class="envelope-container" onclick="openEnvelope()">
+    <svg class="envelope" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2 16L32 36L62 16V52H2V16Z" fill="#ffffff" stroke="#D16BA5" stroke-width="2"/>
+      <path d="M2 16L32 4L62 16L32 36L2 16Z" fill="#D16BA5" stroke="#D16BA5" stroke-width="2"/>
+      <text x="32" y="24" text-anchor="middle" font-size="10" fill="white">❤️</text>
+    </svg>
   </div>
 
   <script>
     function openEnvelope() {
-      const envelope = document.querySelector('.envelope');
-      envelope.classList.add('opened');
+      const container = document.querySelector('.envelope-container');
+      container.style.transition = 'transform 1s ease';
+      container.style.transform = 'scale(0)';
       setTimeout(() => {
         window.location.href = 'rose.html';
-      }, 1200); // Delay sebelum pindah ke halaman rose.html
+      }, 1000);
     }
   </script>
 </body>
