--- a/rose.html
+++ b/rose.html
@@ -1,97 +1,34 @@
-<!-- rose.html (versi CSS-only tanpa gambar) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blooming Rose</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rose Bloom</title>
   <style>
     body {
-      background: #fff0f5;
+      margin: 0;
+      background: #fdf6f9;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
     }
-
-    .flower {
-      position: relative;
-      width: 100px;
-      height: 100px;
-      animation: bloom 1.5s ease-out forwards;
-      transform: scale(0);
+    .rose {
+      width: 150px;
+      height: 300px;
+      animation: grow 2s ease-out forwards;
     }
-
-    .petal {
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      background: #d16ba5;
-      border-radius: 50% 50% 0 0;
-      transform-origin: bottom center;
-      opacity: 0;
-      animation: pop-petal 1s ease forwards;
-    }
-
-    .petal:nth-child(1) {
-      transform: rotate(0deg) translateY(-30px);
-      animation-delay: 0.2s;
-    }
-    .petal:nth-child(2) {
-      transform: rotate(72deg) translateY(-30px);
-      animation-delay: 0.4s;
-    }
-    .petal:nth-child(3) {
-      transform: rotate(144deg) translateY(-30px);
-      animation-delay: 0.6s;
-    }
-    .petal:nth-child(4) {
-      transform: rotate(216deg) translateY(-30px);
-      animation-delay: 0.8s;
-    }
-    .petal:nth-child(5) {
-      transform: rotate(288deg) translateY(-30px);
-      animation-delay: 1s;
-    }
-
-    .center {
-      width: 40px;
-      height: 40px;
-      background: #b83280;
-      border-radius: 50%;
-      position: absolute;
-      top: 30px;
-      left: 30px;
-      z-index: 1;
-      animation: pop-center 1s ease forwards;
-      opacity: 0;
-      animation-delay: 1.2s;
-    }
-
-    @keyframes pop-petal {
-      0% { opacity: 0; transform: scale(0) rotate(var(--angle)) translateY(-30px); }
-      100% { opacity: 1; transform: scale(1) rotate(var(--angle)) translateY(-30px); }
-    }
-
-    @keyframes pop-center {
-      0% { transform: scale(0); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    @keyframes bloom {
-      to { transform: scale(1); }
+    @keyframes grow {
+      from { transform: scale(0); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
 <body>
-  <div class="flower">
-    <div class="petal"></div>
-    <div class="petal"></div>
-    <div class="petal"></div>
-    <div class="petal"></div>
-    <div class="petal"></div>
-    <div class="center"></div>
-  </div>
+  <svg class="rose" viewBox="0 0 64 128" xmlns="http://www.w3.org/2000/svg">
+    <path d="M32 64C32 48 40 40 40 24C40 12 32 4 32 4C32 4 24 12 24 24C24 40 32 48 32 64Z" fill="#D32F2F"/>
+    <path d="M32 64C32 80 36 90 36 100C36 108 32 124 32 124C32 124 28 108 28 100C28 90 32 80 32 64Z" fill="#388E3C"/>
+    <path d="M32 100L38 90L32 95L26 90L32 100Z" fill="#4CAF50"/>
+  </svg>
 </body>
 </html>
